Fixing footer nav spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -141,6 +141,10 @@ footer {
   align-items: center;
 }
 
+footer nav {
+  height: 1.25em;
+}
+
 footer p, footer a {
   font-size: 0.75em;
   margin: 0;
@@ -630,8 +634,6 @@ orders page
   footer p, footer a {
     font-size: 0.5em;
   }
-
-
 }
 
 @media(max-width:374px) {
